# NISINP

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  NEWS.md  README.md  SECURITY.md  celery_beat.py  celery_worker.py  conftest.py  cronjob.py  docker-init.sh  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: Docker-pre-build-checks.yml  codeql-analysis.yml  codeql.yml  docker-ghcr.yml  pytest.yml  pythonapp.yml
api/: serializers.py  urls.py  views.py
contrib/: cronjob.sh  update.sh
dependencies/: urls.py  views.py
docker/: Dockerfile  README.md  apache2-example.conf  docker-compose.dokploy.yml  docker-compose.example.yml  docker-init.sh
docs/: api-v1.rst  architecture.rst  conf.py  exemple.rst  index.rst  installation.rst  modules.rst  permissions.rst  prerequisites.rst  report_generation.rst  requirements-app.txt  requirements.txt  security.rst  settings.py  ui_admin_introduction.rst  ui_administrator.rst  ui_create_an_account.rst  ui_enable 2FA.rst  ui_enable_2FA.rst  ui_how to report an incident.rst  ui_how_to_report_an_incident.rst  ui_how_to_submit_a_security_objective.rst  ui_import-export.rst  ui_incident notification dashboard.rst  ui_incident_notification_dashboard.rst  ui_incident_reporting_workflow_operator_admin.rst  ui_incident_reporting_workflow_regulator_admin.rst  ui_introduction.rst  ui_login page.rst  ui_login_page.rst  ui_operator_admin.rst  ui_parts of the homepage.rst  ui_parts_of_the_homepage.rst  ui_platform_admin.rst  ui_platformadmin.rst  ui_regulator_admin.rst  ui_regulator_user.rst  ui_reported_incidents_view.rst  ui_security_objectives_dashboard.rst  ui_security_objectives_workflow_operator_admin.rst  (+4 more)
docs/_static/: docx_test_template.docx  docx_test_template_rendered.docx  global-architecture.odg  openapi.yml
docs/ui_regulator_admin/: administration.rst  governance.rst  incident_notification.rst  index.rst  reporting.rst  security_objectives.rst
governanceplatform/: __init__.py  admin.py  apps.py  asgi.py  auth.py  authentication.py  celery.py  config_dev.py  context_processors.py  custom_auth_backend.py  decorators.py  forms.py  formset.py  globals.py  hashers.py  helpers.py  managers.py  middleware.py  mixins.py  models.py  otp_utils.py  permissions.py  session_backend.py  settings.py  signals.py  tasks.py  tools.py  translations.py  urls.py  validators.py  views.py  widgets.py  wsgi.py  zitadel.py
governanceplatform/migrations/: 0001_initial.py  0002_alter_company_country.py  0002_company_types_and_more.py  0002_initial.py  0002_remove_user_is_regulator.py  0002_rename_adress_company_address_and_more.py  0002_sector_accronym_sector_specific_impact.py  0002_services_servicestranslation.py  0003_alter_cert_country_alter_regulator_country.py  0003_alter_company_phone_number_alter_user_phone_number.py  0003_companyuser_regulatoruser_and_more.py  0003_externaltoken_alter_company_options_and_more.py  0003_remove_user_is_operateur_sectoradministration_and_more.py  0003_sectorcontact_unique_sectorcontact.py  0003_services_accronym.py  0004_alter_certuser_cert_alter_certuser_user_and_more.py  0004_alter_company_identifier.py  0004_alter_user_companies_alter_user_sectors.py  0004_company_email_for_notification.py  0004_remove_company_is_operateur.py  0004_remove_sector_specific_impact.py  0005_alter_company_email_alter_company_phone_number_and_more.py  0005_alter_user_companies_alter_user_sectors.py  0005_regulator_temp_description_regulator_temp_full_name_and_more.py  0005_remove_company_monarc_path_and_more.py  0005_rename_services_service_and_more.py  0006_alter_company_country.py  0006_alter_sector_managers_sector_level_sector_lft_and_more.py  0006_alter_sectoradministration_options.py  0006_auto_20240723_1401.py  0006_delete_externaltoken_alter_user_is_staff.py  0006_remove_user_proxy_token.py  0007_alter_sector_parent.py  0007_remove_regulator_description_and_more.py  0007_rename_accronym_sector_acronym_and_more.py  0007_sector_creator_sector_creator_name.py  0007_user_proxy_token.py  0008_alter_user_phone_number.py  0008_auto_20240723_1405.py  0008_company_description_company_full_name.py  (+88 more)
governanceplatform/scripts/: clean_incident_user.py  unactive_account_cleaning.py  update_all_group_permissions.py
governanceplatform/tests/: conftest.py  data.py  test_admin.py  test_db.py  test_models.py  test_session.py  test_views.py
governanceplatform/utils/: weasyprint_fetcher.py
incidents/: admin.py  apps.py  decorators.py  email.py  filters.py  forms.py  globals.py  helpers.py  mixins.py  models.py  pdf_generation.py  tasks.py  urls.py  views.py  widgets.py
incidents/api/: serializers.py  urls.py  views.py
incidents/migrations/: 0001_initial.py  0002_incident_authorities.py  0002_remove_answer_incident_answer_incident_workflow.py  0002_remove_predefinedanswer_allowed_additional_answer.py  0002_rename_reglementation_incident_reglementation.py  0002_sectorregulation_report_status_changed_email.py  0003_alter_incident_other_authority_and_more.py  0003_incident_other_authority.py  0003_incidentworkflow_incident_workflows.py  0003_remove_question_is_preliminary.py  0003_remove_sectorregulationworkflow_unique_sectorregulationworkflowposition_and_more.py  0005_logreportread.py  (+96 more)
locale/: django.pot  djangojs.pot  serima_backend_translations_v0.9.xlsx
nisinp/: bootstrap.py
operateur/: apps.py  models.py  urls.py  views.py
parler_patch/: apps.py  monkey.py
proxy/: models.py  urls.py  views.py
regulator/: apps.py  models.py  urls.py  views.py
reporting/: admin.py  apps.py  filters.py  forms.py  globals.py  helpers.py  models.py  signals.py  tasks.py  urls.py  viewLogic.py  views.py
reportwizard/: apps.py
securityobjectives/: admin.py  apps.py  email.py  filters.py  forms.py  globals.py  mixins.py  models.py  tasks.py  urls.py  views.py
templates/: 404.html  500.html  base.html
(+217 files in other folders)
