[tool.poetry]
name = "governanceplatform"
version = "0.2.0"
description = "Governance Platform - NISINP"
authors = [
    "Cédric Bonhomme <cedric.bonhomme@nc3.lu>",
    "Jérôme Lombardi <jerome.lombardi@nc3.lu>",
    "Juan Rocha <juan.rocha@nc3.lu>",
    "Ruslan Baidan <ruslan.baidan@nc3.lu>",
]
license = "AGPL-3.0-or-later"
readme = "README.md"

homepage = "https://github.com/informed-governance-project/NISINP"
repository = "https://github.com/informed-governance-project/NISINP"
documentation = "https://nisinp.readthedocs.io"

keywords = ["NC3-LU", "NIS", "NIS2", "incident-notification"]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.2"
psycopg2-binary = "^2.8.4"
cryptography = "^42.0.2"
django-cors-headers = "^4.3.1"
drf-spectacular = "^0.27.0"
drf-spectacular-sidecar = "^2024.1.1"
django-bootstrap5 = "^23.4"
django-otp = "^1.1.6"
django-formtools = "^2.5.1"
django-two-factor-auth = "^1.15.5"
phonenumbers = "^8.13.11"
django-import-export = "^3.2.0"
parler = "^1.0.1"
django-parler = "^2.3"
django-bootstrap-datepicker-plus = "^5.0.4"
django-countries = "^7.5.1"
weasyprint = "^62.0"
django-extensions = "^3.2.3"
django-parler-rest = "^2.2"
python-dateutil = "^2.8.2"
django-phonenumber-field = "^7.3.0"
django-filter = "^23.5"
pytz = "^2024.1"
plotly = "^5.23.0"
kaleido = "0.2.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pre-commit = "^3.4.0"
black = "^24.3.0"
pyupgrade = "^3.14.0"
autoflake = "^2.2.1"
mypy = "^1.5.1"
types-requests = "^2.31.0.7"
pip-audit = "^2.7.0"
isort = "^5.12.0"
django-debug-toolbar = "^4.2.0"
pyparsing = "^3.1.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx-book-theme = "^1.0.1"
sphinxcontrib-openapi = "^0.8.1"
pydot = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true
