[project]
name = "governanceplatform"
version = "0.5.13+reporting"
description = "Governance Platform - NISINP"
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = ["NC3-LU", "NIS", "NIS2", "incident-notification"]
requires-python = ">=3.12,<4"
authors = [
    { name = "Cédric Bonhomme", email = "cedric.bonhomme@nc3.lu" },
    { name = "Jérôme Lombardi", email = "jerome.lombardi@nc3.lu" },
    { name = "Juan Rocha", email = "juan.rocha@nc3.lu" },
    { name = "Ruslan Baidan", email = "ruslan.baidan@nc3.lu" },
]
dependencies = [
    "django>=6.0,<7",
    "psycopg2-binary>=2.8.4,<3",
    "cryptography>=48.0.0,<49",
    "django-cors-headers>=4.3.1,<5",
    "drf-spectacular>=0.29.0,<0.30",
    "drf-spectacular-sidecar>=2026.4.1,<2027",
    "django-bootstrap5>=26.2,<27",
    "django-otp>=1.1.6,<2",
    "django-formtools>=2.5.1,<3",
    "django-two-factor-auth>=1.15.5,<2",
    "phonenumbers>=9.0.27,<10",
    "django-import-export>=4.4.0,<5",
    "parler>=1.0.1,<2",
    "django-parler @ git+https://github.com/informed-governance-project/django-parler.git@master",
    "django-countries>=8.2.0,<9",
    "weasyprint>=68.0,<69",
    "django-extensions>=4.1,<5",
    "django-parler-rest>=2.2,<3",
    "python-dateutil>=2.8.2,<3",
    "django-phonenumber-field>=8.4.0,<9",
    "django-filter>=25.2,<26",
    "pytz>=2026.1,<2027",
    "plotly>=6.6.0,<7",
    "kaleido>=1.2.0,<2",
    "openpyxl>=3.1.5,<4",
    "django-cookiebanner>=0.2.8,<0.3",
    "django-health-check>=4.0.0,<5",
    "whitenoise>=6.9.0,<7",
    "django-simple-captcha>=0.6.2,<0.7",
    "celery>=5.5.1,<6",
    "redis>=7.4.0,<8",
    "markdown>=3.10.1,<4",
    "bleach>=6.3.0,<7",
    "docxtpl>=0.20.2,<0.21",
    "python-docx>=1.2.0,<2",
    "django-colorfield>=0.14.0,<0.15",
    "psutil>=7.2.2,<8",
    "gunicorn>=26.0.0,<27",
]

[project.urls]
Homepage = "https://github.com/informed-governance-project/NISINP"
Repository = "https://github.com/informed-governance-project/NISINP"
Documentation = "https://nisinp.readthedocs.io"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
pre-commit = "^4.2.0"
black = "^26.3.1"
pyupgrade = "^3.19.1"
autoflake = "^2.3.1"
mypy = "^1.15.0"
types-requests = "^2.32.0.20250515"
pip-audit = "^2.9.0"
isort = "^8.0.1"
pyparsing = "^3.2.3"
pytest = "^9.0.3"
pytest-django = "^4.11.1"
pytest-html = "^4.1.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx-book-theme = "^1.0.1"
sphinxcontrib-openapi = "^0.8.1"
pydot = "^1.4.2"
sphinx = "^9.1.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true
